[package]
name = "kimem"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
color-eyre = "0.6.5"
comfy-table = "7.2.2"
hex = "0.4.3"
reqwest = { version = "0.13.4", features = ["json", "form"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_urlencoded = "0.7.1"
sha2 = "0.11.0"
tokio = { version = "1.52.3", features = ["full"] }
